--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hayang01.GitHub.io by hayang01</title>
+    <title>Welcome to Kris's homepage</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Hayang01.GitHub.io</h1>
+        <h1 class="header">Kristine's home</h1>
         <p class="header"></p>
 
 
